2011-03-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-namesOfPromisedFilesDroppedAtDestination:),
	* Source/NSTableView.m
	(-namesOfPromisedFilesDroppedAtDestination:): Implement this drag
	and drop support method.

2011-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSComboBoxCell.m: Correct imports.

2011-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-_didChangeSortDescriptors:),
	* Source/NSTableView.m (-_didChangeSortDescriptors:): Send the
	message to the data source not the delegate.

2011-03-16 06:30-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSThemeMenu.m: Use copy in setMenu:forWindow: instead of
	NSArchiver.

2011-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* ColorPickers/GSNamedColorPicker.m
	* Source/NSBrowser.m
	* Source/NSPanel.m
	* Source/NSOpenPanel.m
	* Source/GSDisplayServer.m
	* Source/NSFormCell.m
	* Source/NSBitmapImageRep.m
	* Source/NSForm.m
	* Source/GSVbox.m
	* Source/NSSavePanel.m
	* Source/GSMemoryPanel.m
	* Source/NSScroller.m
	* Source/NSMenuView.m
	* Source/NSSecureTextField.m
	* Source/NSHelpPanel.m
	* Source/NSSegmentedCell.m
	* Source/NSStepperCell.m
	* Source/NSColorPanel.m
	* Source/NSDataLinkPanel.m
	* Source/GSTable.m
	* Source/NSBrowserCell.m
	* Source/GSHbox.m: Correct issues with missing or incorrect self
	tests in initXXX methods pointed out by static analyser.

2011-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m (+printerWithName:) Autorelease
	the dummy printer.
	* Source/NSWorkspace.m (-iconForFile:): Remove unused code.
	* Source/NSComboBoxCell.m: Remove the old browser based
	implementation after testing the new one for seven years.

2011-03-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSMenuItemCell.m: Add missing -retain for key
	equivalent modifier strings

2011-03-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSSavePanel.h: Add OS 10.6 #ifdef around
	new showsHiddenFiles methods
